# erosion-simulation

.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp
src/modules/Application/: Application.cpp  Application.hpp  ApplicationConfig.hpp  IApplication.hpp
src/modules/InputController/: IInputController.hpp  InputAction.hpp  InputBinding.hpp  InputSource.hpp  KeyboardInputController.cpp  KeyboardInputController.hpp
src/modules/MeshGenerator/: IMeshGenerator.hpp  MeshGenerator.cpp  MeshGenerator.hpp
src/modules/MeshGenerator/MeshWrapper/: MeshWrapper.cpp  MeshWrapper.hpp
src/modules/RainGenerator/: IRainGenerator.hpp  RainDrop.hpp  RainGenerator.cpp  RainGenerator.hpp
src/modules/Scene/: IScene.hpp
src/modules/Scene/TerrainScene/: TerrainScene.cpp  TerrainScene.hpp
src/modules/Terrain/: TerrainData.hpp  TerrainModelConfig.hpp
src/modules/TerrainData/: TerrainData.hpp
src/modules/TerrainGenerator/: ITerrainGenerator.hpp
src/modules/TerrainGenerator/HeightMapTerrainGenerator/: HeightMapTerrainGenerator.cpp  HeightMapTerrainGenerator.hpp
src/modules/TerrainGenerator/PerlinNoiseTerrainGenerator/: PerlinNoiseTerrainGenerator.cpp  PerlinNoiseTerrainGenerator.hpp
src/modules/TerrainModifier/: ITerrainModifier.hpp
src/modules/TerrainModifier/HydraulicErosion/: HydraulicErosion.cpp  HydraulicErosion.hpp
src/modules/TerrainModifier/TerrainPainter/: TerrainPainter.cpp  TerrainPainter.hpp
src/modules/TerrainPainter/: ITerrainPainter.hpp
src/modules/TerrainPainter/SimpleTerrainPainter/: SimpleTerrainPainter.cpp  SimpleTerrainPainter.hpp
src/modules/TerrainRenderer/: ITerrainRenderer.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp
tools/: build.py  run.py
tools/dev/: common.py  paths.py
tools/dev/docker/: raylib-builder.dockerfile
